app-helloup/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloup
  namespace: helloup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloup
  template:
    metadata:
      labels:
        app: helloup
    spec:
      containers:
        - name: helloup
          image: gornication/helloup:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloup
  namespace: helloup
spec:
  # type: NodePort
  selector:
    app: helloup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
      # nodePort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloup
  namespace: helloup
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: helloup
            port:
              number: 80
